--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,3 +35,48 @@
         }
       }
  }
+
+
+
+
+
+
+ pipeline {
+    agent any
+    triggers {
+      pollSCM('* * * * 1-5')
+    }
+    environment {
+        Docker_Password = credentials('Docker_Password')
+         Docker_Username = credentials('Docker_Username')
+    }
+    stages {
+        stage('Docker Build') {
+            steps {
+                // echo 'Build stage'
+                script {
+            get_branch = "env | grep GIT_BRANCH | awk -F / '{print \$NF}' | xargs echo -n"
+            env.get_branch_exec=sh(returnStdout: true, script: get_branch)
+          } 
+          sh '''
+            // docker build -t venuzs/test:${get_branch_exec} .
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 451563709560.dkr.ecr.us-east-1.amazonaws.com
+            docker build -t 488617992296.dkr.ecr.us-east-1.amazonaws.com/test:${get_branch_exec} .
+          '''
+        }
+            }
+        
+        stage('Docker Push') {
+            steps {
+                 script {
+            get_branch = "env | grep GIT_BRANCH | awk -F / '{print \$NF}' | xargs echo -n"
+            env.get_branch_exec=sh(returnStdout: true, script: get_branch)
+                 }
+                sh '''
+                //  docker login -u ${Docker_Username} -p ${Docker_Password}
+                docker push 488617992296.dkr.ecr.us-east-1.amazonaws.com/test:${get_branch_exec}
+                '''
+            }
+        }
+    }
+}
